--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div id="card">
   <div class="side one"></div>
   <div class="side two">
-    <h2>Mabel Olivera</h2>
-    <p>Queridos programadores de todo el mundo</p>
-    <p>En este día de San Valentín, quiero enviarles un mensaje especial para expresar mi profunda admiración por su increíble trabajo y dedicación. Cada línea de código que escriben es como una declaración de amor al mundo digital, cada algoritmo que diseñan es un poema de ingenio y creatividad.</p>
-    <p>¡Feliz día de San Valentín, queridos programadores! Que sus corazones estén llenos de amor y sus líneas de código estén libres de bugs.</p>
+    <h2>Mariana Bazan</h2>
+    <p>Para mi querida hadita hermosa</p>
+    <p>En este día de San Valentín, quiero enviarte un mensaje especial para expresar mi profundo cariño a pesar del poco tiempo que te conozco, adoro que compartamos tantas cosas y la paz que tenemos para hablar, a pesar de la distancia te mando todos los besos y abrazos que te mereces💖.</p>
+    <p>¡Feliz día de San Valentín, mi querida hada 🧚! Que la distancia no sea un impedimiento para que te sientas acompañada.</p>
   </div>
 </div>
 
